# voicetracer

./: DEPLOYMENT.md  DEPLOY_NOW.md  Dockerfile  IMPLEMENTATION_PLAN.md  README.md  SESSION_2_SUMMARY.md  added features.txt  commonlogic.txt  corelogic.txt  ground_truth.txt  new_patch.txt  newdirection.txt  prompt.txt  prototype.txt  purpose.txt  pyproject.toml  requirements.txt
docs/: DEVELOPER_GUIDE.md  USER_GUIDE.md
src/: app.py  exporters.py  metric_calculator.py  metrics_spec.py  models.py  visualizations.py
src/ai_detector/: __init__.py  preprocessor.py
src/ai_detector/metrics/: __init__.py
tests/: test_voicetracer.py
