[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "voicetracer"
version = "0.1.0"
description = "Document AI-induced stylistic homogenization in L2 academic writing"
authors = [{name = "VoiceTracer Team"}]
requires-python = ">=3.9"
dependencies = [
    "streamlit>=1.28.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "plotly>=5.18.0",
    "kaleido>=0.2.1",
    "matplotlib>=3.8.0",
    "python-docx>=0.8.11",
    "openpyxl>=3.1.0",
    "reportlab>=4.0.0",
    "python-pptx>=0.6.23",
    "PyPDF2>=3.0.0",
    "beautifulsoup4>=4.12.0",
    "pytesseract>=0.3.10",
    "pdf2image>=1.16.0",
    "pillow>=10.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.5.0",
]

[tool.black]
line-length = 100

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
